# GlassBox

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml
config/: default.yaml
examples/: basic_retrieval.py  multimodal_query.py  writeback_example.py
scripts/: distill_lora.py  modernize_types.py
src/glassbox_rag/: __init__.py  __main__.py  cli.py  config.py  server.py
src/glassbox_rag/adapters/: __init__.py  _utils.py  haystack.py  langchain.py  llamaindex.py
src/glassbox_rag/core/: __init__.py  chunker.py  dedup.py  encoder.py  engine.py  generator.py  hooks.py  indexing_extras.py  metrics.py  reranker.py  retriever.py  tokens.py  writeback.py
src/glassbox_rag/core/strategies/: __init__.py  context_compression.py  multi_query.py  parent_child.py  query_rewrite.py
src/glassbox_rag/evaluation/: __init__.py  datasets.py  generation.py  retrieval.py  runner.py
src/glassbox_rag/experiments/: __init__.py  experiment_tracker.py
src/glassbox_rag/git/: __init__.py  manager.py
src/glassbox_rag/pipelines/: __init__.py  manager.py
src/glassbox_rag/plugins/: __init__.py  base.py  sdk.py  supabase.py
src/glassbox_rag/plugins/databases/: __init__.py  mongodb.py  mysql.py  postgresql.py  sqlite.py
src/glassbox_rag/plugins/embedders/: __init__.py  ollama.py  onnx.py  openai.py
src/glassbox_rag/plugins/vector_stores/: __init__.py  chroma.py  faiss.py  pinecone.py  qdrant.py  weaviate.py
src/glassbox_rag/trace/: __init__.py  backends.py  tracker.py  visualizer.py
src/glassbox_rag/tui/: __init__.py  app.py  client.py  theme.py
src/glassbox_rag/tui/screens/: config_editor.py  debugger.py  evaluation.py  experiments.py  ingest.py  overview.py  pipeline.py  plugins.py  telemetry.py
src/glassbox_rag/tui/widgets/: __init__.py  collapsible_panel.py  drag_list.py  metric_card.py  pipeline_view.py  status_indicator.py  trace_tree.py
src/glassbox_rag/ui/static/: app.js
src/glassbox_rag/ui/templates/: dashboard.html
src/glassbox_rag/utils/: __init__.py  auth.py  helpers.py  logging.py  multimodal.py  telemetry.py
src/glassbox_rag/versioning/: __init__.py  version_manager.py
tests/integration/: test_engine.py  test_real_backends.py
tests/unit/: test_adapters.py  test_core.py  test_dedup.py  test_engine_bugs.py  test_evaluation.py  test_hooks.py  test_indexing_extras.py  test_tokens.py
ui/static/: app.js  style.css
ui/templates/: dashboard.html  index.html
