[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "glassbox-rag"
version = "0.3.1"
description = "An open-source, high-transparency modular RAG framework for AI/ML applications"
requires-python = ">=3.9"
readme = "README.md"
license = "Apache-2.0"
authors = [
    {name = "averoe"}
]
keywords = ["rag", "retrieval", "generation", "onnx", "ollama", "vector-store", "multimodal"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "python-multipart>=0.0.6",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

embeddings = [
    "onnxruntime>=1.16.0",
    "tokenizers>=0.15.0",
    "ollama>=0.0.50",
    "openai>=1.3.0",
    "cohere>=4.0.0",
    "google-generativeai>=0.3.0",
    "aiohttp>=3.8.0",
]

vector-stores = [
    "qdrant-client>=2.4.0",
    "chromadb>=0.4.0",
    "faiss-cpu>=1.7.0",
    "pinecone-client>=2.2.0",
    "weaviate-client>=3.25.0",
]

databases = [
    "psycopg2-binary>=2.9.0",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.19.0",
    "pymongo>=4.6.0",
    "mysql-connector-python>=8.1.0",
]

multimodal = [
    "pillow>=10.0.0",
    "pypdf>=3.17.0",
    "python-pptx>=0.6.21",
    "pytesseract>=0.3.10",
]

telemetry = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "prometheus-client>=0.19.0",
]

auth = [
    "redis>=5.0.0",
]

reranking = [
    "sentence-transformers>=2.2.0",
    "cohere>=4.0.0",
]

all = [
    "glassbox-rag[embeddings,vector-stores,databases,multimodal,telemetry,auth,reranking]",
]

[project.scripts]
glassbox-rag = "glassbox_rag.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["glassbox_rag*"]

[tool.setuptools.package-data]
glassbox_rag = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
